--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="latest/css/main.min.css">
     <link rel="stylesheet" type="text/css" href="latest/css/themes/me.min.css">
@@ -10,54 +11,26 @@
 
     <body class="main me">
 
-        <div class="grid-container-row alt alert-bar">
-            <div class="grid-container-col grid__fixed-width">
-                <div class="grid-container-row grid-justify-center alert">
-                    <strong>Alert:</strong> I have read and <a class="btn grid"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M2.93 17.07A10 10 0 1 1 17.07 2.93 10 10 0 0 1 2.93 17.07zm12.73-1.41A8 8 0 1 0 4.34 4.34a8 8 0 0 0 11.32 11.32zM9 5h2v6H9V5zm0 8h2v2H9v-2z"/></svg> understand</a>
+        <div class="grid-container-row primary_s060 nav-bar">
+            <div class="grid-container-col">
+                <div class="grid-container-row">
+                    <a class="btn btn-sidebar_toggle-menu"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg></a>
                 </div>
             </div>
         </div>
 
         <header class="grid-container-col">
 
-            <div class="nav-util mono_s030">
-                <div class="grid-container-row grid__fixed-width">
-                    <div class="grid-container-col grid-3-9 grid-justify-center">
-                        <object id="logo" type="image/svg+xml" data="latest/assets/logo.svg"></object>
-                    </div>
-                    <div class="grid-container-col grid-3-9 grid-justify-center"></div>
-                    <div class="grid-container-col grid-3-9 grid-justify-center">
-                        <a href="#" class="btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M9.26 13a2 2 0 0 1 .01-2.01A3 3 0 0 0 9 5H5a3 3 0 0 0 0 6h.08a6.06 6.06 0 0 0 0 2H5A5 5 0 0 1 5 3h4a5 5 0 0 1 .26 10zm1.48-6a2 2 0 0 1-.01 2.01A3 3 0 0 0 11 15h4a3 3 0 0 0 0-6h-.08a6.06 6.06 0 0 0 0-2H15a5 5 0 0 1 0 10h-4a5 5 0 0 1-.26-10z"/></svg> Link</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="nav-main mono_s04">
-                <div class="grid-container-row grid__fixed-width">
-                    <div class="grid-container-col grid-3-9 grid-justify-center"></div>
-                    <div class="grid-container-col grid-1-9 grid-justify-center">
-                        <a href="#" class="btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M9.26 13a2 2 0 0 1 .01-2.01A3 3 0 0 0 9 5H5a3 3 0 0 0 0 6h.08a6.06 6.06 0 0 0 0 2H5A5 5 0 0 1 5 3h4a5 5 0 0 1 .26 10zm1.48-6a2 2 0 0 1-.01 2.01A3 3 0 0 0 11 15h4a3 3 0 0 0 0-6h-.08a6.06 6.06 0 0 0 0-2H15a5 5 0 0 1 0 10h-4a5 5 0 0 1-.26-10z"/></svg> Link</a>
-                    </div>
-                    <div class="grid-container-col grid-1-9 grid-justify-center">
-                        <a href="#" class="btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M9.26 13a2 2 0 0 1 .01-2.01A3 3 0 0 0 9 5H5a3 3 0 0 0 0 6h.08a6.06 6.06 0 0 0 0 2H5A5 5 0 0 1 5 3h4a5 5 0 0 1 .26 10zm1.48-6a2 2 0 0 1-.01 2.01A3 3 0 0 0 11 15h4a3 3 0 0 0 0-6h-.08a6.06 6.06 0 0 0 0-2H15a5 5 0 0 1 0 10h-4a5 5 0 0 1-.26-10z"/></svg> Link</a>
-                    </div>
-                    <div class="grid-container-col grid-1-9 grid-justify-center">
-                        <a href="#" class="btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M9.26 13a2 2 0 0 1 .01-2.01A3 3 0 0 0 9 5H5a3 3 0 0 0 0 6h.08a6.06 6.06 0 0 0 0 2H5A5 5 0 0 1 5 3h4a5 5 0 0 1 .26 10zm1.48-6a2 2 0 0 1-.01 2.01A3 3 0 0 0 11 15h4a3 3 0 0 0 0-6h-.08a6.06 6.06 0 0 0 0-2H15a5 5 0 0 1 0 10h-4a5 5 0 0 1-.26-10z"/></svg> Link</a>
-                    </div>
-                    <div class="grid-container-col grid-3-9 grid-justify-center"></div>
-                </div>
-            </div>
-
-        </header>
-
-        <div class="main grid-container-col">
-
-            <div class="grid-container-row mono_s085">
+            <div class="grid-container-row mono_s070">
                 <div class="grid-container-col grid__fixed-width">
                     <h1>Style Guide</h1>
                     <p class="micro">Design & Layout definitions</p>
                 </div>
             </div>
+
+        </header>
+
+        <div class="grid-container-col">
 
             <div class="grid-container-row mono_s090">
                 <div class="grid-container-col grid__fixed-width">
@@ -182,7 +155,13 @@
                 </div>
             </div>
 
-            <div class="grid-container-row mono_s090">
+            <div class="grid-container-row">
+                <div class="grid-container-col grid__fixed-width">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+
+            <div id="color-palettes" class="grid-container-row mono_s090">
                 <div class="grid-container-col grid__fixed-width">
                     <h2>color palettes</h2>
                 </div>
@@ -266,6 +245,12 @@
                 </div>
             </div>
 
+            <div class="grid-container-row">
+                <div class="grid-container-col grid__fixed-width">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+
             <div class="grid-container-row mono_s095">
                 <div class="grid-container-row grid__fixed-width">
                     <h3>secondary</h3>
@@ -341,6 +326,12 @@
                 </div>
                 <div class="grid-container-col grid-1-5 secondary_s000">
                     <p>secondary_s00</p>
+                </div>
+            </div>
+
+            <div class="grid-container-row">
+                <div class="grid-container-col grid__fixed-width">
+                    <p>&nbsp;</p>
                 </div>
             </div>
 
@@ -422,6 +413,12 @@
                 </div>
             </div>
 
+            <div class="grid-container-row">
+                <div class="grid-container-col grid__fixed-width">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+
             <div class="grid-container-row mono_s095">
                 <div class="grid-container-row grid__fixed-width">
                     <h3>alt</h3>
@@ -500,7 +497,13 @@
                 </div>
             </div>
 
-            <div class="grid-container-row mono_s090">
+            <div class="grid-container-row">
+                <div class="grid-container-col grid__fixed-width">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+
+            <div grid="grid-system" class="grid-container-row mono_s090">
                 <div class="grid-container-col grid__fixed-width">
                     <h2>grid system</h2>
                 </div>
@@ -548,48 +551,92 @@
                 </div>
             </div>
 
+            <div class="grid-container-row">
+                <div class="grid-container-col grid__fixed-width">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+
+            <div id="navigation" class="grid-container-row mono_s095">
+                <div class="grid-container-row grid__fixed-width">
+                    <h2>navigation</h2>
+                </div>
+            </div>
+
+            <div class="nav-main mono_s070">
+                <div class="grid-container-row grid__fixed-width">
+                    <div class="grid-container-col grid-3-9 grid-justify-center"></div>
+                    <div class="grid-container-col grid-1-9 grid-justify-center">
+                        <a href="#" class="btn btn-nav_main"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M9.26 13a2 2 0 0 1 .01-2.01A3 3 0 0 0 9 5H5a3 3 0 0 0 0 6h.08a6.06 6.06 0 0 0 0 2H5A5 5 0 0 1 5 3h4a5 5 0 0 1 .26 10zm1.48-6a2 2 0 0 1-.01 2.01A3 3 0 0 0 11 15h4a3 3 0 0 0 0-6h-.08a6.06 6.06 0 0 0 0-2H15a5 5 0 0 1 0 10h-4a5 5 0 0 1-.26-10z"/></svg> Link</a>
+                    </div>
+                    <div class="grid-container-col grid-1-9 grid-justify-center">
+                        <a href="#" class="btn btn-nav_main"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M9.26 13a2 2 0 0 1 .01-2.01A3 3 0 0 0 9 5H5a3 3 0 0 0 0 6h.08a6.06 6.06 0 0 0 0 2H5A5 5 0 0 1 5 3h4a5 5 0 0 1 .26 10zm1.48-6a2 2 0 0 1-.01 2.01A3 3 0 0 0 11 15h4a3 3 0 0 0 0-6h-.08a6.06 6.06 0 0 0 0-2H15a5 5 0 0 1 0 10h-4a5 5 0 0 1-.26-10z"/></svg> Link</a>
+                    </div>
+                    <div class="grid-container-col grid-1-9 grid-justify-center">
+                        <a href="#" class="btn btn-nav_main"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M9.26 13a2 2 0 0 1 .01-2.01A3 3 0 0 0 9 5H5a3 3 0 0 0 0 6h.08a6.06 6.06 0 0 0 0 2H5A5 5 0 0 1 5 3h4a5 5 0 0 1 .26 10zm1.48-6a2 2 0 0 1-.01 2.01A3 3 0 0 0 11 15h4a3 3 0 0 0 0-6h-.08a6.06 6.06 0 0 0 0-2H15a5 5 0 0 1 0 10h-4a5 5 0 0 1-.26-10z"/></svg> Link</a>
+                    </div>
+                    <div class="grid-container-col grid-3-9 grid-justify-center"></div>
+                </div>
+            </div>
+
+            <div class="grid-container-row primary_s060 nav-bar">
+                <div class="grid-container-col grid__fixed-width">
+                    <div class="grid-container-row">
+                        <a class="btn btn-nav_back"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M3.828 9l6.071-6.071-1.414-1.414L0 10l.707.707 7.778 7.778 1.414-1.414L3.828 11H20V9H3.828z"/></svg></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid-container-row">
+                <div class="grid-container-col grid__fixed-width">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+
+            <div id="cta-bars" class="grid-container-row mono_s095">
+                <div class="grid-container-row grid__fixed-width">
+                    <h2>cta bars</h2>
+                </div>
+            </div>
+
+            <div class="grid-container-row alt cta-bar_alert">
+                <div class="grid-container-col grid__fixed-width">
+                    <div class="grid-container-row grid-justify-center alert">
+                        <p><strong>please note: </strong> <em>this</em> page very colorful and responsive,</p> <a class="btn btn-alert_confirm"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M11 0h1v3l3 7v8a2 2 0 0 1-2 2H5c-1.1 0-2.31-.84-2.7-1.88L0 12v-2a2 2 0 0 1 2-2h7V2a2 2 0 0 1 2-2zm6 10h3v10h-3V10z"/></svg> I Totally Agree</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid-container-row">
+                <div class="grid-container-col grid__fixed-width">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+
         </div>
 
-        <footer>
-
-            <div class="mono_s075">
-                <div class="grid-container-row grid__fixed-width">
-                    <div class="grid-container-col grid-1-3">
-                        <p>1-3 Grid Column</p>
-                    </div>
-                    <div class="grid-container-col grid-2-3">
-                        <p>2-3 Grid Column</p>
-                    </div>
+        <footer class="accent_s015">
+            <div class="grid-container-row grid__fixed-width">
+                <div class="grid-container-col grid-2-5">
+                    <p>2-5 Grid Column</p>
+                </div>
+                <div class="grid-container-col grid-1-5">
+                    <p>1-5 Grid Column</p>
+                </div>
+                <div class="grid-container-col grid-1-5">
+                    <p>1-5 Grid Column</p>
+                </div>
+                <div class="grid-container-col grid-1-5">
+                    <p>1-5 Grid Column</p>
                 </div>
             </div>
-
-            <div class="mono_s04">
+            <div class="accent_s025">
                 <div class="grid-container-row grid__fixed-width">
-                    <div class="grid-container-col grid-2-5">
-                        <p>2-5 Grid Column</p>
-                    </div>
-                    <div class="grid-container-col grid-1-5">
-                        <p>1-5 Grid Column</p>
-                    </div>
-                    <div class="grid-container-col grid-1-5">
-                        <p>1-5 Grid Column</p>
-                    </div>
-                    <div class="grid-container-col grid-1-5">
-                        <p>1-5 Grid Column</p>
-                    </div>
-                </div>
-                <div class="grid-container-row full-width mono_s045">
-                    <div class="grid-container-col grid-1-5">
-                        <p>(&sect;)</p>
-                    </div>
-                    <div class="grid-container-col grid-3-5"></div>
-                    <div class="grid-container-col grid-1-5">
-                        <p>Scudder Stevens © 2020</p>
-                    </div>
+                    <p class="nano">&sect; Scudder Stevens © 2020</p>
                 </div>
             </div>
-
         </footer>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </body>
 </html>
