updated background imgs & grid styles

--- a/index.html
+++ b/index.html
@@ -613,9 +613,13 @@
                 </div>
             </div>
 
-            <div class="grid-container-row">
+            <div class="grid-container-row iso-background__mitsubishis full-height">
                 <div class="grid-container-col grid__fixed-width">
-                    <p>&nbsp;</p>
+                    <div class="grid-vert-center">
+                        <h3>full window height container</h3>
+                        <p>with background image</p>
+                        <p>and vertically centered</p>
+                    </div>
                 </div>
             </div>
 
