vt me and documentation updates
VT and ME theme updates
define page style structure
update to Documentation

--- a/ssme.html
+++ b/ssme.html
@@ -2,6 +2,8 @@
 <html>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githack.com/scudderstevens/styles/master/latest/css/main.min.css" />
+    <link rel="icon" type="image/png" href="https://ssme.s3.filebase.com/theme/assets/Angular-S_solid-logo_inverse-32w.png" />
     <link rel="stylesheet" type="text/css" href="latest/css/main.min.css">
     <link rel="stylesheet" type="text/css" href="latest/css/themes/me.min.css">
 
@@ -32,13 +34,13 @@
 
         <div class="grid-container-col">
 
-            <div class="grid-container-row mono_s085">
+            <!-- typography -->
+            <div id="typography" class="grid-container-row mono_s085">
                 <div class="grid-container-col grid__fixed-width">
                     <h2>fonts</h2>
                 </div>
             </div>
-
-            <div class="grid-container-row mono_s095">
+            <div id="headers" class="grid-container-row mono_s095">
                 <div class="grid-container-row grid__fixed-width">
                     <div class="grid-container-col grid-1-12"></div>
                     <div class="grid-container-col grid-2-12">
@@ -47,7 +49,6 @@
                     <div class="grid-container-row grid-3-4"></div>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-12"></div>
                 <div class="grid-container-col grid-2-12">
@@ -57,35 +58,30 @@
                     <h1>h1 tag</h1>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-4"></div>
                 <div class="grid-container-col grid-3-4">
                     <h2>h2 tag</h2>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-4"></div>
                 <div class="grid-container-col grid-3-4">
                     <h3>h3 tag</h3>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-4"></div>
                 <div class="grid-container-col grid-3-4">
                     <h4>h4 tag</h4>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container grid-1-4"></div>
                 <div class="grid-container-col grid-3-4">
                     <h5>h5 tag</h5>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-4"></div>
                 <div class="grid-container-col grid-3-4">
@@ -102,7 +98,6 @@
                     <div class="grid-container-row grid-3-4"></div>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-12"></div>
                 <div class="grid-container-col grid-2-12">
@@ -124,7 +119,6 @@
                     <p><a class="smooth-scroll" href="#navigation">return to navigation</a></p>
                 </div>
             </div>
-
             <div class="grid-container-row mono_s095">
                 <div class="grid-container-row grid__fixed-width">
                     <div class="grid-container-col grid-1-12"></div>
@@ -135,7 +129,7 @@
                 </div>
             </div>
 
-            <div class="grid-container-row grid__fixed-width">
+            <div id="links" class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-12"></div>
                 <div class="grid-container-col grid-2-12">
                     <p>a tag</p>
@@ -152,18 +146,18 @@
                 </div>
             </div>
 
+            <!-- color palettes -->
             <div id="color-palettes" class="grid-container-row mono_s085">
                 <div class="grid-container-col grid__fixed-width">
                     <h2>color palettes</h2>
                 </div>
             </div>
 
-            <div class="grid-container-row mono_s095">
+            <div id="primary-color-palette" class="grid-container-row mono_s095">
                 <div class="grid-container-row grid__fixed-width">
                     <h3>primary</h3>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 primary_s095">
                     <p>primary_s095</p>
@@ -181,7 +175,6 @@
                     <p>primary_s075</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 primary_s070">
                     <p>primary_s07</p>
@@ -199,7 +192,6 @@
                     <p>primary_s05</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 primary_s045">
                     <p>primary_s045</p>
@@ -217,7 +209,6 @@
                     <p>primary_s025</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 primary_s020">
                     <p>primary_s02</p>
@@ -242,12 +233,11 @@
                 </div>
             </div>
 
-            <div class="grid-container-row mono_s095">
+            <div id="secondary-color-palette"class="grid-container-row mono_s095">
                 <div class="grid-container-row grid__fixed-width">
                     <h3>secondary</h3>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 secondary_s095">
                     <p>secondary_s095</p>
@@ -265,7 +255,6 @@
                     <p>secondary_s075</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 secondary_s070">
                     <p>secondary_s07</p>
@@ -283,7 +272,6 @@
                     <p>secondary_s05</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 secondary_s045">
                     <p>secondary_s045</p>
@@ -301,7 +289,6 @@
                     <p>secondary_s025</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 secondary_s020">
                     <p>secondary_s02</p>
@@ -326,12 +313,11 @@
                 </div>
             </div>
 
-            <div class="grid-container-row mono_s095">
+            <div id="accent-color-palette" class="grid-container-row mono_s095">
                 <div class="grid-container-row grid__fixed-width">
                     <h3>accent</h3>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 accent_s095">
                     <p>accent_s095</p>
@@ -349,7 +335,6 @@
                     <p>accent_s075</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 accent_s070">
                     <p>accent_s07</p>
@@ -367,7 +352,6 @@
                     <p>accent_s05</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 accent_s045">
                     <p>accent_s045</p>
@@ -385,7 +369,6 @@
                     <p>accent_s025</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 accent_s020">
                     <p>accent_s02</p>
@@ -410,12 +393,11 @@
                 </div>
             </div>
 
-            <div class="grid-container-row mono_s095">
+            <div id="alt-color-palette" class="grid-container-row mono_s095">
                 <div class="grid-container-row grid__fixed-width">
                     <h3>alt</h3>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 alt_s095">
                     <p>alt_s095</p>
@@ -433,7 +415,6 @@
                     <p>alt_s075</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 alt_s070">
                     <p>alt_s07</p>
@@ -451,7 +432,6 @@
                     <p>alt_s05</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 alt_s045">
                     <p>alt_s045</p>
@@ -469,7 +449,6 @@
                     <p>alt_s025</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-5 alt_s020">
                     <p>alt_s02</p>
@@ -487,19 +466,18 @@
                     <p>alt_s00</p>
                 </div>
             </div>
-
             <div class="grid-container-row">
                 <div class="grid-container-col grid__fixed-width">
                     <p>&nbsp;</p>
                 </div>
             </div>
 
+            <!-- grid system -->
             <div grid="grid-system" class="grid-container-row mono_s085">
                 <div class="grid-container-col grid__fixed-width">
                     <h2>grid system</h2>
                 </div>
             </div>
-
             <div class="grid-container-row full-width mono_s095">
                 <div class="grid-container-col grid-1-3">
                     <p>1-3 Grid Column</p>
@@ -508,7 +486,6 @@
                     <p>2-3 Grid Column</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-4">
                     <p>1-4 Grid Column</p>
@@ -520,7 +497,6 @@
                     <p>1-4 Grid Column</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-1-2">
                     <p>1-2 Grid Column</p>
@@ -532,7 +508,6 @@
                     <p>1-4 Grid Column</p>
                 </div>
             </div>
-
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-3-4">
                     <p>3-4 Grid Column</p>
@@ -548,13 +523,14 @@
                 </div>
             </div>
 
+            <!-- background images -->
             <div id="background-images" class="grid-container-row mono_s085">
                 <div class="grid-container-row grid__fixed-width">
                     <h2>background images</h2>
                 </div>
             </div>
 
-            <div class="grid-container-col iso-background__mitsubishis fixed">
+            <div id="parallax" class="grid-container-col iso-background__mitsubishis fixed">
                 <div class="grid-container-row mono_s090a85">
                     <div class="grid-container-col grid__fixed-width">
                         <h3>parallax</h3>
@@ -567,12 +543,11 @@
                 </div>
             </div>
 
-            <div class="grid-container-row mono_s090">
+            <div id="cover" class="grid-container-row mono_s090">
                 <div class="grid-container-col grid__fixed-width">
                     <h3>cover</h3>
                 </div>
             </div>
-
             <div class="grid-container-row iso-background__repeating-grid full-height">
                 <div class="grid-container-col grid__fixed-width">
                     <div class="grid-vert-center">
@@ -589,20 +564,18 @@
                 </div>
             </div>
 
+            <!-- navigation -->
             <div id="navigation" class="grid-container-row mono_s085">
                 <div class="grid-container-row grid__fixed-width">
                     <h2>navigation</h2>
                 </div>
             </div>
-
             <div class="mono_s090">
                 <div class="grid-container-col grid__fixed-width">
                     <h3>menu toggles</h3>
                 </div>
             </div>
-
         </div>
-
         <div class="grid-container-row primary_s060 ribbon_nav">
             <div class="grid-container-col">
                 <div class="grid-container-row">
@@ -610,7 +583,6 @@
                 </div>
             </div>
         </div>
-
         <div class="grid-container-row primary_s060 ribbon_nav">
             <div class="grid-container-col">
                 <div class="grid-container-row">
@@ -622,11 +594,10 @@
         <div class="grid-container-col">
 
             <div class="mono_s090">
-                <div class="grid-container-col grid__fixed-width">
+                <div id="buttons" class="grid-container-col grid__fixed-width">
                     <h3>buttons</h3>
                 </div>
             </div>
-
             <div class="ribbon_nav squid_s090">
                 <div class="grid-container-row grid__fixed-width">
                     <div class="grid-container-col grid-3-9 grid-justify-center"></div>
@@ -648,7 +619,6 @@
                     <h3>jump link</h3>
                 </div>
             </div>
-
             <div class="mono_s095">
                 <div class="grid-container-col grid__fixed-width">
                     <p><a class="smooth-scroll" href="#paragraph">jump to paragraphs</a></p>
@@ -661,6 +631,7 @@
                 </div>
             </div>
 
+            <!-- ribbons -->
             <div id="ribbons" class="grid-container-row mono_s085">
                 <div class="grid-container-row grid__fixed-width">
                     <h2>ribbons</h2>
@@ -677,6 +648,7 @@
 
         </div>
 
+        <!-- footer -->
         <footer class="accent_s015">
             <div class="grid-container-row grid__fixed-width">
                 <div class="grid-container-col grid-2-5">
