--- a/verdanttongues.html
+++ b/verdanttongues.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="Description" content="Verdant Toungues" />
 
-    <link rel="stylesheet" type="text/css" media="all" href="https://raw.githack.com/scudderstevens/styles/master/latest/css/main.min.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="https://latest.cdn-sty.link/css/main.min.css" />
     <link rel="stylesheet" type="text/css" media="all" href="./latest/css/themes/vt.min.css" />
 
     <link rel="icon" type="image/png" href="https://verdant.s3.filebase.com/theme/assets/VT_simple-micro-logo-32w.png" sizes="32x32" />
@@ -682,6 +682,6 @@
         </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="latest/js/smooth-scroll.js"></script>
+        <script src="https://latest.cdn-sty.link/js/smooth-scroll.js"></script>
     </body>
 </html>
