--- a/ssme-style-guide.html
+++ b/ssme-style-guide.html
@@ -743,7 +743,7 @@
                 <div class="grid-container-row mono_s070">
                     <div class="grid-container-col grid__fixed-width">
                         <h1>Scudder Stevens</h1>
-                        <p class="micro">Digital Product Manager</p>
+                        <p class="micro">Digital Product Owner</p>
                     </div>
                 </div>
             </header>
@@ -838,10 +838,10 @@
 
                 <div class="grid-container-row grid__fixed-width project-header">
                     <svg class="current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="20px" height="20px">
-                        <line class="svg-elem" x1="3.87" y1="0.83" x2="3.87" y2="13" style="stroke-linecap:round;stroke-linejoin:round;stroke-width:2px"/>
-                        <circle class="svg-elem" cx="16.04" cy="3.87" r="3.04" style="fill:#ffff;stroke-linecap:round;stroke-linejoin:round;stroke-width:2px"/>
-                        <circle class="svg-elem" cx="3.87" cy="16.04" r="3.04" style="fill:#ffff;stroke-linecap:round;stroke-linejoin:round;stroke-width:2px"/>
-                        <path class="svg-elem" d="M16.08,7A9.12,9.12,0,0,1,7,16.08" transform="translate(-0.04 -0.04)" style="stroke-linecap:round;stroke-linejoin:round;stroke-width:2px"/>
+                        <line class="svg-elem svg-line-elem" x1="3.87" y1="0.83" x2="3.87" y2="13" />
+                        <circle class="svg-elem svg-fill-elem" cx="16.04" cy="3.87" r="3.04" />
+                        <circle class="svg-elem svg-fill-elem" cx="3.87" cy="16.04" r="3.04" />
+                        <path class="svg-elem svg-line-elem" d="M16.08,7A9.12,9.12,0,0,1,7,16.08" transform="translate(-0.04 -0.04)" />
                     </svg>
                     <h3>project name</h3>
                     <div class="dropdown">
@@ -887,10 +887,10 @@
                     <div class="grid-container-col grid-1-3 project-features">
                         <div class="grid-container-row">
                             <svg class="current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="20" height="20">
-                                <path class="svg-elem svg-fill-elem" d="M18.4,11.69l-6.65,6.66a1.86,1.86,0,0,1-2.62,0h0l-8-8V1.11h9.27l8,8A1.85,1.85,0,0,1,18.4,11.69Z" transform="translate(-0.16 -0.11)" style="stroke-linecap:round;stroke-linejoin:round;stroke-width:2px"/>
-                                <line class="svg-elem" x1="5.64" y1="5.64" x2="5.66" y2="5.64" style="stroke-linecap:round;stroke-linejoin:round;stroke-width:2px"/>
+                                <path class="svg-elem svg-fill-elem" d="M18.4,11.69l-6.65,6.66a1.86,1.86,0,0,1-2.62,0h0l-8-8V1.11h9.27l8,8A1.85,1.85,0,0,1,18.4,11.69Z" transform="translate(-0.16 -0.11)" />
+                                <line class="svg-elem svg-line-elem" x1="5.64" y1="5.64" x2="5.66" y2="5.64" />
                             </svg>
-                            <h5>features</h4>
+                            <h5>features</h5>
                         </div>
                         <ul>
                             <li>feature 1</li>
