--- a/ssme-style-guide.html
+++ b/ssme-style-guide.html
@@ -828,6 +828,37 @@
 
             </div>
 
+            <div id="intro" class="grid-container-row mono_s090">
+                <div class="grid-container-row grid__fixed-width">
+                    <h3>introductory block</h3>
+                </div>
+            </div>
+
+            <div class="intro-duo">
+                <div class="intro-duo__profile mono_s095">
+                    <div class="profile-img"></div>
+                    <div class="intro-duo__title">
+                        <h1>Scudder Stevens</h1>
+                        <p class="micro">Digital Product Owner <br/> <em>&</em> JAM Stack Developer</p>
+                    </div>
+                </div>
+                <div class="intro-duo__copy">
+                    <div class="intro-duo__title">
+                        <h1>Scudder Stevens</h1>
+                        <p class="micro">Digital Product Owner <br/> <em>&</em> JAM Stack Developer</p>
+                    </div>
+                    <p><strong>Hello</strong>. I work for [Universal Health Services, Inc.](https://www.uhsinc.com/) in the *Digital Marketing Department*. We are a small, talented and well integrated team working out of Nashville, Tennessee and King of Prussia, Pennsylvania. The latter is my home base. On a good day, I split my time between exceeding expectations and finding methods to minimize future efforts. Always on the hunt for the perfectly optimized work flow or more efficient tooling, for exisiting platforms I work in collaboration with the larger UHS teams to keep solutions up to date and running smoothly. For new products, I review internal and external needs, define resources and limitations for product adoption and configure software to address known workflow issues.</p>
+                    <p><strong>My Goal</strong>: focus on solving users’ problems to drive adoption and engagement, creating viral growth for our suite of digital products' strategic goals while creating a unified product strategy and embrace the teams' creative vision. building products based on what we have learnt from our users to make their lives more efficient and productive. Below you will find a list of [projects](#projects "project list") I am currently working on or have recently completed.</p>
+                    <p>When I am not banging on the keyboard for UHS, I am relaxing with my wife and our fur-baby in Philadelphia, PA. I get outside as much as possible to ride my bicycle; and occasionally, I get the chance to play music. I either noodle around on my modular synth or listen to tracks from my extensive collection of [45's](https://en.wikipedia.org/wiki/Single_(music)#7-inch_format "Wikipedia: Music Single - The most common form of the vinyl single is the '45' or '7-inch'..."). mostly [Dub Reggae](https://en.wikipedia.org/wiki/Dub_music "Wikipedia: Dub Music - Dub is a genre of electronic music that grew out of reggae in the late 1960s and early 1970s..."), my favorite!</p>
+                    <p>For additional details, read my <a href="https://drive.google.com/file/d/1JlwMp6ipw6sLnkhWBvQjyyBpELr-bUPY/view?usp=sharing" target="_blank" alt="my resume" class="icon-link">resume
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" stroke="currentColor" fill="none">
+                        <path className="svg-elem" d="M8.17,10.92a4.58,4.58,0,0,0,6.4.92,4.18,4.18,0,0,0,.5-.43l2.75-2.75a4.58,4.58,0,0,0-6.47-6.47L9.77,3.76" transform="translate(-0.07 -0.08)" />
+                        <path className="svg-elem" d="M11.83,9.08a4.58,4.58,0,0,0-6.4-.92,4.18,4.18,0,0,0-.5.43L2.18,11.34a4.58,4.58,0,0,0,6.47,6.47l1.57-1.57" transform="translate(-0.07 -0.08)" />
+                        </svg></a>.
+                    </p>
+                </div>
+            </div>
+
             <div id="current-project" class="grid-container-row mono_s090">
                 <div class="grid-container-row grid__fixed-width">
                     <h3>current project</h3>
